# learn-qr-rust

./: .gitignore  Cargo.toml  README.md  test.ipynb
src/: lib.rs  main.rs
